# VBP

./: .env.example  .geminiignore  .gitignore  Makefile  README.md  analyze_blacklist.py  check_sessions.py  comprehensive_blacklist.py  debug_ids.py  deployment_metadata.json  icnp_parents.json  icnp_parents_full.json  large_synthesis.json  latest_full_synthesis.json  pyproject.toml  report.html  requirements.txt  taxonomy_cache.json  test_workflow_local.py  workflow_synthesis.json
.adk/cache/indexes/: 01bfd14b-cff8-4092-8889-ad20d0ef8318_index.json  06804aa6-5fa6-4c40-8b0c-a58d3ae8b7d0_index.json  0a9e5c4a-6bb6-495c-b415-ba528e75131e_index.json  0baec607-d739-45d5-9917-288d50c2db07_index.json  1205d1b5-3969-440b-aca8-a2c9f2575179_index.json  14ce802f-dc57-4e65-82d9-42505526cbd6_index.json  1565ae7b-04db-445d-ae79-754354aecd2a_index.json  167b1066-6502-448f-ad82-5bcf8fe8224f_index.json  (+87 more)
agents/: vbp_workflow.py
agents/consolidator/: agent.py
agents/research_analyst/: agent.py  prompt.txt  test_agent.py
agents/shared/: tools.py
agents/term_mapper/: agent.py  fo_prompt.txt  restructure_terms.py  restructured_terms.txt  test_agent.py
app/: __init__.py  agent.py  agent_engine_app.py
app/.adk/: session.db
app/app_utils/: .requirements.txt  deploy.py  telemetry.py  typing.py
app/prompts/: clinical_auditor.txt  clinical_extractor.txt  clinical_taxonomist.txt  consolidator.txt  evidence_validator.txt  finding_extractor.txt  fo_classifier.txt  icnp_mapper.txt  metadata_extractor.txt  quality_evaluator.txt  summary_summarizer.txt  taxonomist_diagnosis.txt  taxonomist_goal.txt  taxonomist_intervention.txt
app/report_generator/: main.py
app/shared/: config.py  consolidation.py  document_loader.py  fhir_client.py  logging.py  models.py  parsing_utils.py  pipeline.py  processing.py  taxonomy.py  taxonomy_validator.py  tools.py
docs/: DESIGN_SPEC.md  TROUBLESHOOTING.md
frontend/: main.py
scripts/analysis/: analyze_blacklist.py  analyze_missing.py  analyze_new_run.py  analyze_refset_depth.py  comprehensive_blacklist.py
scripts/taxonomy/: merge_authoritative_cache.py  prefetch_authoritative_terms.py  warm_fhir_cache.py
scripts/utils/: debug_ids.py  find_lidelse.py  inspect_engine.py  state_check.py  test_ancestors.py  test_genai_sdk_raw.py  test_rest.py  test_taxonomist_deep_dive.py  test_taxonomist_failures.py
shared/: models.py
temp_report_generator/: main.py  test_report.html
temp_report_generator/templates/: report.html
tests/: test_otel_minimal.py  test_payload.json
tests/diagnostic/: test_api.py  test_fhir_client.py  test_gcs.py  test_genai_sdk_raw.py  test_rest.py  test_state.py  test_sync.py
tests/eval/: eval_config.json
tests/integration/: monitor_job.py  prefetch_authoritative_terms.py  test_agent_engine_remote.py  test_fhir_client.py  test_observability.py  test_taxonomist_observability.py  test_workflow_local.py  warm_fhir_cache.py
tests/unit/: conftest.py  test_audit_trail.py  test_consolidation_merging.py  test_mapping_logic.py  test_pruning_and_admission.py  test_refset_safety_zone.py  test_report_chat.py  test_taxonomist_agent.py
tools/report_generator/: main.py
(+85 files in other folders)
